SFDC_CI_DEMO/src/objects/Junction_Object__c.object
<CustomObject>
    <fields>
        <fullName>Employee_Details__c</fullName>
        <label>Employee_Details</label>
        <referenceTo>Normal_User__c</referenceTo>
        <relationshipLabel>Junction_Objects</relationshipLabel>
        <relationshipName>Junction_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Event_Manager__c</fullName>
        <label>Event_Manager</label>
        <referenceTo>Event_Manager__c</referenceTo>
        <relationshipLabel>Junction_Objects</relationshipLabel>
        <relationshipName>Junction_Objects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Junction_Object</label>
    <nameField>
        <label>Junction_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junction_Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>